--- a/static/css-custom/bubble.css
+++ b/static/css-custom/bubble.css
@@ -38,6 +38,7 @@ More advanced customization is available through CSS classes within this documen
 .code-font {
 	  font-family: 'Montserrat';
     font-size: 1em;
+    text-shadow: 0 0 15px #4B0082;
 	  }
 
 /* styles the fonts for the header, menus and labels */
